fix(Post): link accessibility color contrast

--- a/components/PostBody.module.css
+++ b/components/PostBody.module.css
@@ -18,8 +18,8 @@
 }
 
 .portableText a {
-  @apply text-blue-500 underline;
+  @apply text-blue-700 underline;
 }
 .portableText a:hover {
-  @apply text-blue-800;
+  @apply text-blue-900;
 }
